# ocaml-base32

./: LICENSE.md  README.md  base32.opam  dune  dune-project
doc/: prelude.ml
src/: base32.ml  base32.mli  dune
test/: dune  test.ml
